# python-template

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
deploy/: Dockerfile
src/: config.py  main.py
tests/: test_main.py
