[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "This template can speed up your new project dev environment creation"
authors = ["mikhail349 <mikhail349349@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pylint = "^2.17.3"
pytest = "^7.3.1"
coverage = "^7.2.5"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pylint."MESSAGES CONTROL"]
disable = "too-few-public-methods"
