[tool.black]
skip-string-normalization=1

[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Mikhail <mikhail349349@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
isort = "^5.13.2"
black = "^23.12.1"
pytest = "^7.4.4"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
